kubernetes/platform/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: platform-frontend
  namespace: platform-system
spec:
  selector:
    app.kubernetes.io/name: platform-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
