kubernetes/platform/frontend/cilium-networkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-frontend-kubelet-probes
  namespace: platform-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: platform-frontend
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
